--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <span class="author-block">
               <a href="https://xggnet.github.io/">Chenxin Li</a><sup>1†</sup>,</span>
             <span class="author-block">
-              <a href="https://github.com/LiuHengyu321">Hengyu Liu</a><sup>1†</sup>,</span>
+              <a href="https://liuhengyu321.github.io/">Hengyu Liu</a><sup>1†</sup>,</span>
             <span class="author-block">
               <a href="https://zhiwenfan.github.io/">Zhiwen Fan</a><sup>2</sup>,
             </span>
