--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
         <hr style="margin-top:0px">
         <div class="content has-text-justified">
           <p>
-            Recent advancements in large generative models and real-time neural rendering 
-            using point-based techniques pave the way for a future of widespread visual data distribution through sharing synthesized 3D assets. 
+            Recent advancements in large generative models and real-time neural rendering using point-based techniques pave the way for a future of widespread visual data distribution through sharing synthesized 3D assets. 
           </p>
           <p>
             However, while standardized methods for embedding proprietary or copyright information, either overtly or subtly, 
