--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <!-- PDF Link. -->
               
               <span class="link-block">
-                <a href="https://github.com/CUHK-AIM-Group/GaussianStego"
+                <a href="https://arxiv.org/abs/2407.01301"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
