--- a/index.html
+++ b/index.html
@@ -108,7 +108,10 @@
           <div class="is-size-6 publication-authors">
             † denotes equal contribution, ‡ denotes corresponding author
           </div>
-
+          <div class="is-size-4 publication-authors" style="color: #FF4500;">
+            MM 2024
+          </div>
+          
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
