--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <!-- PDF Link. -->
               
               <span class="link-block">
-                <a href=""
+                <a href="https://dl.acm.org/doi/abs/10.1145/3664647.3680628"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -127,7 +127,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://github.com/yu2hi13/P2SAM"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
