--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
 
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>School of Informatics, Xiamen University,</span>
-            <span class="author-block"><sup>2</sup>The Chinese University of Hong,</span> <br>
+            <span class="author-block"><sup>2</sup>The Chinese University of Hong Kong,</span> <br>
             <span class="author-block"><sup>3</sup>Key Laboratory of Multimedia Trusted Perception and Efficient Computing, Xiamen University</span>
           </div>
 
           <div class="is-size-6 publication-authors">
-            † denotes equal contribution, ‡ denotes corresponding author
+            † denotes equal contribution, ‡ denotes corresponding author.
           </div>
           <div class="is-size-4 publication-authors" style="color: #FF4500;">
             MM 2024
